--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SeoulMong</string>
+    <string name="contens_num">30</string>
     <string name="facebook_app_id">105121096916759</string>
     <string name="fb_login_protocol_scheme">fb105121096916759</string>
 
